# apache-airflow-example

./: README.md
airflow/: app.py  constant.py  database.py  local.db  pyproject.toml
airflow/dags/: etl_pipeline.py
functions/: package-lock.json  package.json
functions/src/: main.azure.ts
functions/src/app/: app.controller.ts  app.service.ts
functions/src/app/pipes/: data.pipe.ts
functions/src/base/: axios.base.ts  validation.base.ts
