[tool.poetry]
name = "apache-airflow-example"
version = "0.1.0"
description = ""
authors = ["anandafiqri <anandafiqri1403@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.13"
apache-airflow = "^2.10.4"
apache-airflow-providers-http = "^5.0.0"
apache-airflow-providers-microsoft-azure = "^12.0.0"
azure-functions = "^1.21.3"
azure-storage-blob = "^12.24.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

